--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script defer>script.js</script>
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,6 +31,69 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="time-block">
+        <div class="row">
+          <div class="hour">7AM</div>
+          <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
+          <button class="saveBtn"><i class="fas fa-save"></i></button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="hour">8AM</div>
+        <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row">
+        <div class="hour">9AM</div>
+        <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row">
+        <div class="hour">10AM</div>
+        <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row">
+        <div class="hour">11AM</div>
+        <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row">
+        <div class="hour">12PM</div>
+        <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row">
+        <div class="hour">1PM</div>
+        <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row">
+        <div class="hour">2PM</div>
+        <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row">
+        <div class="hour">3PM</div>
+        <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row">
+        <div class="hour">4PM</div>
+        <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row">
+        <div class="hour">5PM</div>
+        <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row">
+        <div class="hour">6PM</div>
+        <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+    </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
