update html and script

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="row">
           <div class="hour">8AM</div>
           <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
-          <button class="saveBtn" onclick="save()"><i class="fas fa-save"></i></button>
+          <button class="saveBtn"><i class="fas fa-save"></i></button>
         </div>
 
         <div class="row">
@@ -111,6 +111,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
