--- a/index.html
+++ b/index.html
@@ -31,78 +31,78 @@
 
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="time-block">
+      <div>
 
-        <div class="row">
-          <div class="hour">7AM</div>
-          <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
-          <button class="saveBtn"><i class="fas fa-save"></i></button>
+        <div class="row time-block" id="7">
+          <div class="hour col-1">7AM</div>
+          <textarea class="description col-10"></textarea>
+          <button class="saveBtn col-1"><i class="fas fa-save"></i></button>
         </div>
 
-        <div class="row">
-          <div class="hour">8AM</div>
-          <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
-          <button class="saveBtn"><i class="fas fa-save"></i></button>
+        <div class="row time-block" id="8">
+          <div class="hour col-1">8AM</div>
+          <textarea class="description col-10"></textarea>
+          <button class="saveBtn col-1"><i class="fas fa-save"></i></button>
         </div>
 
-        <div class="row">
-          <div class="hour">9AM</div>
-          <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
-          <button class="saveBtn"><i class="fas fa-save"></i></button>
+        <div class="row time-block" id="9">
+          <div class="hour col-1">9AM</div>
+          <textarea class="description col-10"></textarea>
+          <button class="saveBtn col-1"><i class="fas fa-save"></i></button>
         </div>
 
-        <div class="row">
-          <div class="hour">10AM</div>
-          <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
-          <button class="saveBtn"><i class="fas fa-save"></i></button>
+        <div class="row time-block" id="10">
+          <div class="hour col-1">10AM</div>
+          <textarea class="description col-10"></textarea>
+          <button class="saveBtn col-1"><i class="fas fa-save"></i></button>
         </div>
 
-        <div class="row">
-          <div class="hour">11AM</div>
-          <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
-          <button class="saveBtn"><i class="fas fa-save"></i></button>
+        <div class="row time-block" id="11">
+          <div class="hour col-1">11AM</div>
+          <textarea class="description col-10"></textarea>
+          <button class="saveBtn col-1"><i class="fas fa-save"></i></button>
         </div>
 
-        <div class="row">
-          <div class="hour">12PM</div>
-          <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
-          <button class="saveBtn"><i class="fas fa-save"></i></button>
+        <div class="row time-block" id="12">
+          <div class="hour col-1">12PM</div>
+          <textarea class="description col-10"></textarea>
+          <button class="saveBtn col-1"><i class="fas fa-save"></i></button>
         </div>
 
-        <div class="row">
-          <div class="hour">1PM</div>
-          <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
-          <button class="saveBtn"><i class="fas fa-save"></i></button>
+        <div class="row time-block" id="13">
+          <div class="hour col-1">1PM</div>
+          <textarea class="description col-10"></textarea>
+          <button class="saveBtn col-1"><i class="fas fa-save"></i></button>
         </div>
 
-        <div class="row">
-          <div class="hour">2PM</div>
-          <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
-          <button class="saveBtn"><i class="fas fa-save"></i></button>
+        <div class="row time-block" id="14">
+          <div class="hour col-1">2PM</div>
+          <textarea class="description col-10"></textarea>
+          <button class="saveBtn col-1"><i class="fas fa-save"></i></button>
         </div>
 
-        <div class="row">
-          <div class="hour">3PM</div>
-          <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
-          <button class="saveBtn"><i class="fas fa-save"></i></button>
+        <div class="row time-block" id="15">
+          <div class="hour col-1">3PM</div>
+          <textarea class="description col-10"></textarea>
+          <button class="saveBtn col-1"><i class="fas fa-save"></i></button>
         </div>
 
-        <div class="row">
-          <div class="hour">4PM</div>
-          <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
-          <button class="saveBtn"><i class="fas fa-save"></i></button>
+        <div class="row time-block" id="16">
+          <div class="hour col-1">4PM</div>
+          <textarea class="description col-10"></textarea>
+          <button class="saveBtn col-1"><i class="fas fa-save"></i></button>
         </div>
 
-        <div class="row">
-          <div class="hour">5PM</div>
-          <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
-          <button class="saveBtn"><i class="fas fa-save"></i></button>
+        <div class="row time-block" id="17">
+          <div class="hour col-1">5PM</div>
+          <textarea class="description col-10"></textarea>
+          <button class="saveBtn col-1"><i class="fas fa-save"></i></button>
         </div>
 
-        <div class="row">
-          <div class="hour">6PM</div>
-          <textarea name="description" id="description" cols="100" rows="1" class="description"></textarea>
-          <button class="saveBtn"><i class="fas fa-save"></i></button>
+        <div class="row time-block" id="18">
+          <div class="hour col-1">6PM</div>
+          <textarea class="description col-10"></textarea>
+          <button class="saveBtn col-1"><i class="fas fa-save"></i></button>
         </div>
       </div>
     </div>
